# A-SOUL-Notification

./: LICENSE  README.md  version.json
src/: ASoulNotification.cpp  BilibiliMessage.cpp  BilibiliMessage.h  CMakeLists.txt  DouyinMessage.cpp  DouyinMessage.h  Essential.h  QueryCenter.cpp  QueryCenter.h  logo.rc  member.json  version.json
